src/test/ui/consts/const-eval/unwind-abort.stderr
error[E0080]: any use of this value will cause an error
  --> $DIR/unwind-abort.rs:5:5
   |
LL |     panic!()
   |     ^^^^^^^^
   |     |
   |     the evaluated program panicked at 'explicit panic', $DIR/unwind-abort.rs:5:5
   |     inside `foo` at $SRC_DIR/std/src/panic.rs:LL:COL
   |     inside `_` at $DIR/unwind-abort.rs:8:15
...
LL | const _: () = foo();
   | --------------------
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
